--- a/StationControl/appsettings.json
+++ b/StationControl/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;Database=mydb;User=myuser;Password=myuserpassword;"
+    "DefaultConnection": "Server=localhost;Port=3306;Database=stationcontrol_db;User=root;Password=root;"
   },
   "EmailSettings": {
   "SmtpServer": "smtp.gmail.com",
